; ModuleID = '/home/carl/AnghaBench/linux/drivers/mfd/extr_tps68470.c_tps68470_chip_init.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mfd/extr_tps68470.c_tps68470_chip_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.regmap = type { i32 }

@TPS68470_REG_RESET = common dso_local global i32 0, align 4
@TPS68470_REG_RESET_MASK = common dso_local global i32 0, align 4
@TPS68470_REG_REVID = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [38 x i8] c"Failed to read revision register: %d\0A\00", align 1
@.str.1 = private unnamed_addr constant [22 x i8] c"TPS68470 REVID: 0x%x\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, %struct.regmap*)* @tps68470_chip_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tps68470_chip_init(%struct.device* %0, %struct.regmap* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.device*, align 8
  %5 = alloca %struct.regmap*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.device* %0, %struct.device** %4, align 8
  store %struct.regmap* %1, %struct.regmap** %5, align 8
  %8 = load %struct.regmap*, %struct.regmap** %5, align 8
  %9 = load i32, i32* @TPS68470_REG_RESET, align 4
  %10 = load i32, i32* @TPS68470_REG_RESET_MASK, align 4
  %11 = call i32 @regmap_write(%struct.regmap* %8, i32 %9, i32 %10)
  store i32 %11, i32* %7, align 4
  %12 = load i32, i32* %7, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %2
  %15 = load i32, i32* %7, align 4
  store i32 %15, i32* %3, align 4
  br label %31

16:                                               ; preds = %2
  %17 = load %struct.regmap*, %struct.regmap** %5, align 8
  %18 = load i32, i32* @TPS68470_REG_REVID, align 4
  %19 = call i32 @regmap_read(%struct.regmap* %17, i32 %18, i32* %6)
  store i32 %19, i32* %7, align 4
  %20 = load i32, i32* %7, align 4
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %27

22:                                               ; preds = %16
  %23 = load %struct.device*, %struct.device** %4, align 8
  %24 = load i32, i32* %7, align 4
  %25 = call i32 @dev_err(%struct.device* %23, i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str, i64 0, i64 0), i32 %24)
  %26 = load i32, i32* %7, align 4
  store i32 %26, i32* %3, align 4
  br label %31

27:                                               ; preds = %16
  %28 = load %struct.device*, %struct.device** %4, align 8
  %29 = load i32, i32* %6, align 4
  %30 = call i32 @dev_info(%struct.device* %28, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.1, i64 0, i64 0), i32 %29)
  store i32 0, i32* %3, align 4
  br label %31

31:                                               ; preds = %27, %22, %14
  %32 = load i32, i32* %3, align 4
  ret i32 %32
}

declare dso_local i32 @regmap_write(%struct.regmap*, i32, i32) #1

declare dso_local i32 @regmap_read(%struct.regmap*, i32, i32*) #1

declare dso_local i32 @dev_err(%struct.device*, i8*, i32) #1

declare dso_local i32 @dev_info(%struct.device*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
